--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body style="text-align:center; font-family:Arial;">
     <h1>AR Quick Look - 茶壶模型</h1>
     <p>点击下方图片在 AR 中查看</p>
-    <a rel="ar" href="teapot.usdz">
+    <a rel="ar" href="model.usdz">
         <img src="preview.jpg" alt="Preview" style="max-width:90%; height:auto; border:1px solid #ccc;">
     </a>
     <p>仅支持 iPhone / iPad Safari 浏览器</p>
 </body>
 </html>
+
