--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Quick Look - Teapot</title>
+    <title>AR Quick Look - USDZ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="text-align:center; font-family:Arial;">
-    <h1>AR Quick Look - 茶壶模型</h1>
-    <p>点击下方图片在 AR 中查看</p>
+<body style="text-align:center; font-family: sans-serif;">
+    <h1>点击下方图片在 iPhone/iPad 查看 AR</h1>
+
+    <!-- 点击图片打开 AR -->
     <a rel="ar" href="model.usdz">
-        <img src="preview.jpg" alt="Preview" style="max-width:90%; height:auto; border:1px solid #ccc;">
+        <img src="preview.jpg" alt="AR Model Preview" style="max-width:90%; border:1px solid #ccc;">
     </a>
-    <p>仅支持 iPhone / iPad Safari 浏览器</p>
+
+    <p>请用 iPhone 或 iPad Safari 浏览器点击图片</p>
 </body>
 </html>
+
 
